# hello-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  word_count.rs
src/advanced/: mod.rs
src/basics/: control_loop.rs  io.rs  memory_safety.c  mod.rs  ownership.rs  safety.rs  scope.rs  variable.rs
src/control_flow/: conditions.rs  mod.rs
src/primitive/: collection.rs  compound.rs  mod.rs  scalar.rs
src/struct_trait/: mod.rs
