[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
authors = ["Kartik <kartik@vensav.com>", "Lalitha <lalitha@vensav.com>"]
readme = "README.md"
# documentation = "https://docs.rs/bitflags"
# homepage = "https://serde.rs/"
# repository = "https://github.com/rust-lang/cargo/"
# license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
